<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment"
    tools:context=".ui.health.HealthFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/homepage"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/materialTextView2"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView2"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/homepage_one"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bottom_bar"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView2">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/health1"
                android:layout_width="360dp"
                android:layout_height="44dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_konsul"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:paddingTop="2dp"
                android:text="@string/health1"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/health2"
                android:layout_width="360dp"
                android:layout_height="44dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/bg_konsul"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:paddingTop="2dp"
                android:text="@string/health2"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/health3"
                android:layout_width="360dp"
                android:layout_height="44dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/bg_konsul"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:paddingTop="2dp"
                android:text="@string/health3"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/health4"
                android:layout_width="360dp"
                android:layout_height="44dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/bg_konsul"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:paddingTop="2dp"
                android:text="@string/health4"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/health5"
                android:layout_width="360dp"
                android:layout_height="44dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/bg_konsul"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:paddingTop="2dp"
                android:text="@string/health5"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/health6"
                android:layout_width="360dp"
                android:layout_height="44dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/bg_konsul"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:paddingTop="2dp"
                android:text="@string/health6"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:backgroundTint="@color/blue"
                android:drawableEnd="@drawable/round_arrow_forward_ios_24"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/btn_next"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginTop="156dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>