<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.user.RegistActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView3"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bottom_bar"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shapeableImageView3">

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="32dp"
                android:layout_height="32dp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="330dp"
                android:layout_height="32dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/regist_title"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="360dp"
            android:layout_height="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/regist_name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/regist_name"
            android:layout_width="364dp"
            android:layout_height="44dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:hint="@string/regist" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="360dp"
            android:layout_height="32dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/regist_nomor"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/regist_number"
            android:layout_width="364dp"
            android:layout_height="44dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:hint="@string/regist" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:paddingStart="20dp"
            android:layout_marginTop="88dp"
            android:backgroundTint="@color/blue"
            android:drawableEnd="@drawable/round_arrow_forward_ios_24"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/white"
            android:text="@string/btn_next"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>