<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_result"
    tools:context=".ui.health.HealthFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView3"
            android:layout_width="360dp"
            android:layout_height="0dp"
            android:layout_marginTop="42dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/result_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bottom_bar"
            android:gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView3">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/desc"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/result_two"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/result"
                android:layout_width="360dp"
                android:layout_height="44dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_konsul_select"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:drawableStart="@drawable/outline_info_white"
                android:paddingStart="16dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/poppins_semibold"
                android:textAlignment="center"
                android:text="@string/result_one"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/treatment"
                android:layout_width="360dp"
                android:layout_height="160dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_reguler"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_done"
                android:layout_width="140dp"
                android:layout_height="56dp"
                android:layout_marginTop="48dp"
                android:backgroundTint="@color/blue"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/done"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="583dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/bg_warning"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="12dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/warning"
                    android:textAlignment="center"
                    android:textColor="@color/red"
                    android:textSize="16sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/result_warning"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>